--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <a class="nav-link" href="resume.html">Resume</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact</a>
+          <a class="nav-link" href="contapct.html">Contact</a>
         </li>
       </ul>
     </div>
@@ -57,8 +57,8 @@
     <h3> Thematic and Infographics </h3>
     <div class="row">
       <div class="col-md-4">
-        <a href="project pages/climate.html">
-          <img class="img-fluid" src="assets/climate.png" class="img-thumbnail" alt="climate" width="400" height="200"> 
+        <a href="project pages/GlobalWarming.html">
+          <img class="img-fluid" src="assets/GlobalWarming.png" class="img-thumbnail" alt="GlobalWarming" width="400" height="200"> 
         </a>          
       </div>
       <div class="col-md-4">
@@ -113,10 +113,5 @@
       </div>
     </div>
   </div>    
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 </html>
