--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
   <!-- Creates the navbar -->
   <nav class="navbar navbar-expand-sm  navbar-dark">
     <!-- Brand/logo -->
-    <a class="navbar-brand" href="#">CB Map Design</a>
+    <a class="navbar-brand" href="#">
+      <img src="assets/logo.png" alt="Logo" width=250>
+    </a>
 
     <!-- Toggler/collapsibe Button -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -41,74 +43,75 @@
 
   <!-- Jumbotron -->
   <div class="jumbotron text-left text-black">
-    <p style=line-height:1> </p>
-    <p style=line-height:1> </p>
-    <p style=line-height:1> </p>    
-    <p style=line-height:1> Hello! I've been a land use planner for 24 years and am currently </p>
-    <p style=line-height:1> pursuing a Master's degree in GIS and Web Map Programming.</p>
-    <p style=line-height:1> Welcome to my portfolio!</p> 
-    <p style=line-height:1> </p> 
-    <div class="container">
-      <img class="img-fluid" src="assets/cherieSignature.png" alt="signature" width="250" height="125">
+    <div class="container-fluid pt-3">
+          <div class="row">
+            <div class="col-md-5">
+              <h5>Hello! I've been a land use planner for 24 years and am currently pursuing a Master's degree in GIS and Map Programming.</h5>
+              <h5>Welcome to my portfolio!</h5>
+                <div class="container">
+                  <img class="float-right"src="assets/shortname.png" alt="signature" width="250" height="125">
+                </div>
+            </div>    
+          </div>     
     </div>
   </div>
 
-  <div class="container-fluid">
-    <h3> Thematic and Infographics </h3>
+  <div class="container-fluid pt-3">
+    <h3> Thematic Maps and Infographics </h3>
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-md-4 pt-3">
         <a href="project pages/GlobalWarming.html">
-          <img class="img-fluid" src="assets/GlobalWarming.png" class="img-thumbnail" alt="GlobalWarming" width="400" height="200"> 
+          <img class="img-fluid" src="assets/GlobalWarming.png" class="img-thumbnail" alt="GlobalWarming" width="400" height="200" > 
         </a>          
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 pt-3">
         <a href="project pages/gundeaths.html">
           <img class="img-fluid" src="assets/gundeaths.png" class="img-thumbnail" alt="gundeaths" width="436" height="653"> 
         </a>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 pt-3">
         <a href="project pages/popGrowth.html">
           <img class="img-fluid" src="assets/popGrowthCrop.png" class="img-thumbnail" alt="popGrowth" width="400" height="200"> 
         </a>
       </div>
     </div>
   </div>  
-  <div class="container-fluid">
+  <div class="container-fluid pt-5">
     <h3> Reference Maps </h3>
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-md-4 pt-3">
         <a href="project pages/beachCamping.html">
           <img class="img-fluid" src="assets/beachCamping.png" class="img-thumbnail" alt="beachCamping" width="400" height="200"> 
         </a>          
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 pt-3">
         <a href="project pages/Africa.html">
           <img class="img-fluid" src="assets/Africa.png" class="img-thumbnail" alt="Africa" width="436" height="653"> 
         </a>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 pt-3">
         <a href="project pages/AthensAnkara.html">
           <img class="img-fluid" src="assets/AthensAnkara.png" class="img-thumbnail" alt="AthensAnkara" width="400" height="200"> 
         </a>
       </div>
     </div>
   </div>  
-  <div class="container-fluid">
+  <div class="container-fluid pt-5">
     <h3> Pure Art </h3>
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-md-3 pt-3">
         <a href="project pages/meadow.html">
           <img class="img-fluid" src="assets/meadow.jpg" class="img-thumbnail" alt="Meadow" width="200" height="400"> 
         </a>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-3 pt-3">
         <a href="project pages/sunset.html">
           <img class="img-fluid" src="assets/sunset.jpg" class="img-thumbnail" alt="Sunset" width="200" height="400"> 
         </a>
       </div>
-      <div class="col-md-4">
-        <a href="project pages/Sunflower.html">
-          <img class="img-fluid" src="assets/Sunflower.jpg" class="img-thumbnail" alt="Sunflower" width="200" height="200"> 
+      <div class="col-md-6 pt-3">
+        <a href="project pages/SunflowerCloseup.png">
+          <img class="img-fluid" src="assets/SunflowerCloseup.png" class="img-thumbnail" alt="Sunflower" width="500" height="200"> 
         </a>
       </div>
     </div>
