--- a/project pages/GlobalWarming.html
+++ b/project pages/GlobalWarming.html
@@ -16,7 +16,9 @@
   <!-- Creates the navbar -->
   <nav class="navbar navbar-expand-sm  navbar-dark">
     <!-- Brand/logo -->
-    <a class="navbar-brand" href="../index.html">CB Map Design</a>
+    <a class="navbar-brand" href="#">
+      <img src="../assets/logo.png" alt="Logo" width=250>
+    </a>
 
     <!-- Toggler/collapsibe Button -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
