Project pages completed
descriptions added and logo link corrected (hopefully)

--- a/project pages/AthensAnkara.html
+++ b/project pages/AthensAnkara.html
@@ -46,8 +46,8 @@
         <img class="img-fluid" src="../assets/AthensAnkara.png" alt="AthensAnkara" width="850" height="300">
       </div>
         <div class="col-md-5">  
-          <h4>Title Here.</h4>
-          <p>Description here.</p>
+          <h4>Hillshades and Visual Hiearchy</h4>
+          <p>The Graphic Design in Cartography assignment was to design a 21-leg bicycle route race, similar to the Tour de France. The route was mapped segment by segment in Google maps, then imported into ArcMap for processing with other vector data layers. The underlying hillshade was generated from publicly available elevation data then blended with land cover data in Adobe Photoshop to create the rich base map. Raster and vector data layers were all then imported into Adobe Illustrator for the final map creation.</p>
         </div>
       </div>    
   </div>
