--- a/project pages/GlobalWarming.html
+++ b/project pages/GlobalWarming.html
@@ -46,8 +46,8 @@
         <img class="img-fluid" src="../assets/GlobalWarming.png" alt="Global Warming" width="850" height="300">
       </div>
         <div class="col-md-5">  
-          <h4>Title Here.</h4>
-          <p>Description here.</p>
+          <h4>Introduction to Cartography - Choropleth Maps</h4>
+          <p>From this assignment, I learned the importance of choosing numerical breakpoints and color use to present a trustworthy visual story using a choropleth map. Topic and data source selection were my own. </p>
         </div>
       </div>    
   </div>
