--- a/project pages/sunset.html
+++ b/project pages/sunset.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Gun Ownership</title>
+  <title>sunset</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
@@ -16,9 +16,8 @@
   <!-- Creates the navbar -->
   <nav class="navbar navbar-expand-sm  navbar-dark">
     <!-- Brand/logo -->
-    <a class="navbar-brand" href="#">
-      <img src="../assets/logo.png" alt="Logo" width=250>
-    </a>
+    <a class="navbar-brand" href="../index.html">
+      <img src="../assets/logo.png" alt="Logo" width=250></a>
 
     <!-- Toggler/collapsibe Button -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -42,15 +41,19 @@
   </nav>    
 <div class="container-fluid">
     <div class="row">
-      <div class="col-md-7">  
-        <img class="img-fluid" src="../assets/gundeaths.png" alt="Global Warming" width="850" height="300">
+      <div class="col-md-3">  
+        <img class="img-fluid" src="../assets/sunset.jpg" alt="sunset" width="250" height="400">
       </div>
-        <div class="col-md-5">  
-          <h4>Introduction to Cartography - Proportional Symbols</h4>
-          <p>From this assignment, I learned the importance of choosing numerical breakpoints and color use to present a trustworthy visual story using a proportional symbols. This maps shows two variables, creating a information rich multivariate map. Topic and data source selection were my own. </p>
+        <div class="col-md-5 pt-3">  
+          <h4>Sunset</h4>
+          <p>Oil on canvas.</p>
+          <p>This was the first painting I did after a 10-year break. Why ten years? Marriage, house buying, house renovating, divorce, more house renovating...you get the picture. But regardless, my heart was so happy I started again!</p>
+          <p>This and several pieces of art were in a house that was washed away by Hurricane Micheal in October 2018. The others were never found, but miraculously we found this one stuck up in a tree about 1/4 mile from the house just an hour before the front loaders were going to clear the area. We had to climb over a mountain of house parts and furniture to get it. </p>
+
+          <p>It had weathered 160mph winds and a 19' storm surge. It's got some lovely rubbed edges now and if you hold it up to the light, you can see nail holds. But it's still sturdy and strong after riding through the eye wall of a Category 5 hurricane.</p>
         </div>
       </div>    
   </div>
 </div>
 </body>
-</html>
+</html><\
