--- a/about.html
+++ b/about.html
@@ -1,20 +1,55 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
   <title>About</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/style.css"></link>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 </head>
+
 <body>
+  <!-- Creates the navbar -->
+  <nav class="navbar navbar-expand-sm  navbar-dark">
+    <!-- Brand/logo -->
+    <a class="navbar-brand" href="index.html">
+      <img src="assets/logo.png" alt="Logo" width=250>
+    </a>
 
-<div class="container">
-  <h4>About me.</h4>
+    <!-- Toggler/collapsibe Button -->
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
+    <!-- Links -->
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="about.html">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="resume.html">Resume</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact</a>
+        </li>
+      </ul>
+    </div>
+  </nav>    
+<div class="container-fluid pt-4">
+  <div class="row">
+    <div class="col-md-8">  
+      <h4>About me</h4>
+      <p>My career to date has been as an urban planner in Tallahassee, Florida. I graduated in 1994 with a Bachelor’s in Political Science from Birmingham-Southern College in Alabama, and in 1996 with a Master’s of Urban and Regional Planning from Florida State University. My graduate internship led to my first job with the State of Florida, followed by two and a half years with a private firm. These two positions involved working with many small Florida cities and counties, leading me to realize local government was where I wanted to direct my energy. I love the power of urban planning to shape our communities, quality of life and happiness. Local policy truly sets that stage. </p>
+      <p>That realization led me to employment with the Tallahassee-Leon County Planning Department in 2001. Every few years I craved new challenges and knowledge, so I took on increasing responsibilities in land use, transportation, and comprehensive planning positions within the department. In 2014 I became the Planning Manager. In 2017 I was promoted to Department Director and continue to serve in that position now. I’m very proud of the work I’ve done with my planning team, and proud of the fact that we were awarded the National Planning Excellence Award for a Planning Agency by the American Planning Association in 2014.</p>
+      <p>I’ve also been an amateur artist my entire life. My mother bought me an oil painting kit when I was 12. Since the first scent of linseed oil opening that tube of burnt sienna, I’ve been hooked, reading books and taking drawing classes here and there to improve my skills. Even when the circumstances of life left little time and energy for painting, I would think longingly of it and occassional dig out the old paints to smell them.</p>
+      <p>Approaching the 25-year mark in my career, I again feel the pull of a new challenge. I see the power of mapping and mobile technology and am eager to learn and apply these tools. One of the greatest challenges in urban planning is communicating complicated concepts and data in a way that citizens can digest, often in an emotionally charged environment. Cartography offers me the chance to combine new, powerful skills with a passion for art with a goal of creating new tools to serve the planning field.</p>
+    </div>
+  </div>    
 </div>
-
 </body>
 </html>
