--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
   <nav class="navbar navbar-expand-sm  navbar-dark">
     <!-- Brand/logo -->
     <a class="navbar-brand" href="#">
-      <img src="assets/logo.png" alt="Logo" width=250>
-    </a>
-
+      <img src="assets/logo.png" alt="Logo" width=250></a>
     <!-- Toggler/collapsibe Button -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
@@ -35,7 +33,7 @@
           <a class="nav-link" href="resume.html">Resume</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contapct.html">Contact</a>
+          <a class="nav-link" href="contact.html">Contact</a>
         </li>
       </ul>
     </div>
@@ -110,7 +108,7 @@
         </a>
       </div>
       <div class="col-md-6 pt-3">
-        <a href="project pages/SunflowerCloseup.png">
+        <a href="project pages/Sunflower.html">
           <img class="img-fluid" src="assets/SunflowerCloseup.png" class="img-thumbnail" alt="Sunflower" width="500" height="200"> 
         </a>
       </div>
