--- a/project pages/meadow.html
+++ b/project pages/meadow.html
@@ -2,23 +2,22 @@
 <html lang="en">
 
 <head>
-  <title>Contact</title>
+  <title>meadow</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/style.css"></link>
+  <link rel="stylesheet" href="../css/style.css"></link>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 </head>
 
 <body>
   <!-- Creates the navbar -->
   <nav class="navbar navbar-expand-sm  navbar-dark">
     <!-- Brand/logo -->
-    <a class="navbar-brand" href="index.html">
-      <img src="assets/logo.png" alt="Logo" width=250>
+    <a class="navbar-brand" href="#">
+      <img src="../assets/logo.png" alt="Logo" width=250>
     </a>
 
     <!-- Toggler/collapsibe Button -->
@@ -30,28 +29,29 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="about.html">About</a>
+          <a class="nav-link" href="../about.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="resume.html">Resume</a>
+          <a class="nav-link" href="../resume.html">Resume</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact</a>
+          <a class="nav-link" href="../contact.html">Contact</a>
         </li>
       </ul>
     </div>
-  </nav>
-
-  <div class="container-fluid pt-4">        
-    <h4>Feel free to contact me!</h4>
-    <div class="row pt-4">
-      <div class="col-md-3">
-        <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="cherie-bryant-67589480"><a class="LI-simple-link" href='https://www.linkedin.com/in/cherie-bryant-67589480?trk=profile-badge'>Cherie Bryant</a>
+  </nav>    
+<div class="container-fluid">
+    <div class="row">
+      <div class="col-md-3">  
+        <img class="img-fluid" src="../assets/meadow.jpg" alt="meadow" width="250" height="400">
+      </div>
+        <div class="col-md-5 pt-3">  
+          <h4>Meadow</h4>
+          <p>Oil on canvas.</p>
+          <p>This was inspired by a farm on Highway 71 between Blountstown and Wewahitchka, Florida. It was spring and the crop was just about to bloom.</p>
         </div>
-      </div>
-      <div class="col-md-3">
-        <p>Email: <a href="mailto:cherie657@gmail.com">cherie657@gmail.com</a> </p>
-      </div>
-    </div>    
+      </div>    
+  </div>
+</div>
 </body>
-</html>
+</html><\
