--- a/project pages/popGrowth.html
+++ b/project pages/popGrowth.html
@@ -2,23 +2,22 @@
 <html lang="en">
 
 <head>
-  <title>Contact</title>
+  <title>popGrowth</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/style.css"></link>
+  <link rel="stylesheet" href="../css/style.css"></link>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 </head>
 
 <body>
   <!-- Creates the navbar -->
   <nav class="navbar navbar-expand-sm  navbar-dark">
     <!-- Brand/logo -->
-    <a class="navbar-brand" href="index.html">
-      <img src="assets/logo.png" alt="Logo" width=250>
+    <a class="navbar-brand" href="#">
+      <img src="../assets/logo.png" alt="Logo" width=250>
     </a>
 
     <!-- Toggler/collapsibe Button -->
@@ -30,28 +29,27 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="about.html">About</a>
+          <a class="nav-link" href="../about.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="resume.html">Resume</a>
+          <a class="nav-link" href="../resume.html">Resume</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact</a>
+          <a class="nav-link" href="../contact.html">Contact</a>
         </li>
       </ul>
     </div>
   </nav>
 
-  <div class="container-fluid pt-4">        
-    <h4>Feel free to contact me!</h4>
-    <div class="row pt-4">
-      <div class="col-md-3">
-        <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="cherie-bryant-67589480"><a class="LI-simple-link" href='https://www.linkedin.com/in/cherie-bryant-67589480?trk=profile-badge'>Cherie Bryant</a>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <p>Email: <a href="mailto:cherie657@gmail.com">cherie657@gmail.com</a> </p>
-      </div>
-    </div>    
+<div class="container-fluid pt-4" >
+  <div class="row">
+    <h3 class="text-white" class="text-center">Leon County Population - A 25-year Look Ahead</h3>
+    <p class="text-center">Infographics are a great way to really delve into a topic in more detail. This one looks at a very real issue using current local data.</p>
+  </div>
+
+  <div class="row">
+    <img class="img-fluid" src="../assets/popGrowth.png" alt="popGrowth">
+  </div>
+</div>
 </body>
 </html>
