--- a/resume.html
+++ b/resume.html
@@ -1,20 +1,82 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
   <title>Resume</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/style.css"></link>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 </head>
+
 <body>
+  <!-- Creates the navbar -->
+  <nav class="navbar navbar-expand-sm  navbar-dark">
+    <!-- Brand/logo -->
+    <a class="navbar-brand" href="index.html">
+      <img src="assets/logo.png" alt="Logo" width=250>
+    </a>
 
-<div class="container">
-  <h4>Resume.</h4>
+    <!-- Toggler/collapsibe Button -->
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-</div>
+    <!-- Links -->
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="about.html">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="resume.html">Resume</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
+    <div class="container pt-3">
+    <h3> Profile </h3>
+    <div class="row">
+      <p>As an urban planner with 23 years of experience in state and local urban planning, I am growing my skills and experience to harness the power of Geographic Information Systems mapping and development. In particular, I want to help tackle urban growth and sustainability challenges with a focus on making technical information and complex interrelationships more accessible and comprehensible for the public so as to better inform decision making.</p>
+      <div class="col-md-8 pt-3">
+        <a href="project pages/meadow.html">
+          <img class="img-fluid" src="assets/meadow.jpg" class="img-thumbnail" alt="Meadow" width="200" height="400"> 
+        </a>
+      </div>
+      <div class="col-md-3 pt-3">
+        <a href="project pages/sunset.html">
+          <img class="img-fluid" src="assets/sunset.jpg" class="img-thumbnail" alt="Sunset" width="200" height="400"> 
+        </a>
+      </div>
+      <div class="col-md-6 pt-3">
+        <a href="project pages/Sunflower.html">
+          <img class="img-fluid" src="assets/SunflowerCloseup.png" class="img-thumbnail" alt="Sunflower" width="500" height="200"> 
+        </a>
+      </div>
+    </div>
+
+
+
+  <div class="container-fluid">
+    <div class="row">
+        <img class="img-fluid" src="assets/resume1.png" alt="resume1">
+    </div>
+        <div class="row">
+        <img class="img-fluid" src="assets/resume2.png" alt="resume2">
+    </div>
+        <div class="row">
+        <img class="img-fluid" src="assets/resume3.png" alt="resume3">
+    </div>
+        <div class="row">
+        <img class="img-fluid" src="assets/resume4.png" alt="resume4">
+    </div>
 </body>
 </html>
