still trying to fix logo reference

--- a/project pages/Sunflower.html
+++ b/project pages/Sunflower.html
@@ -46,8 +46,10 @@
         <img class="img-fluid" src="../assets/SunflowerCloseup.png" alt="Sunflower" width="850" height="300">
       </div>
         <div class="col-md-5">  
-          <h4>Title Here.</h4>
-          <p>Description here.</p>
+          <h4>Sunflower - Lost at Sea</h4>
+          <p>Oil on canvas, 40" x 40"</p>
+          <p>This was one of the first paintings where I really felt like I was getting the hang of representing nature. While never taking formal classes other than a couple of drawing classes, I had read a number of books on oils. This I loved!</p>
+          <p>I say loved because it was washed away in a house destroyed by Hurricane Micheal in October 2018. Thankfully, a few months ago I was cleaning out some files and found a newspaper story about an art show featuring Tallahassee City employees and it featured my painting prominantly, so I have a great photo to remember it by. </p>
         </div>
       </div>    
   </div>
