--- a/project pages/popGrowth.html
+++ b/project pages/popGrowth.html
@@ -16,8 +16,8 @@
   <!-- Creates the navbar -->
   <nav class="navbar navbar-expand-sm  navbar-dark">
     <!-- Brand/logo -->
-    <a class="navbar-brand" href="#">
-      <img src="../assets/logo.png" alt="Logo" width=250>
+    <a class="navbar-brand" href="../index.html">
+      <img src="logo.png" alt="Logo" width=250>
     </a>
 
     <!-- Toggler/collapsibe Button -->
