Fixed capitalization error in png references

--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
   <nav class="navbar navbar-expand-sm  navbar-dark">
     <!-- Brand/logo -->
     <a class="navbar-brand" href="index.html">
-      <img src="assets/logo.png" alt="Logo" width=250>
+      <img src="assets/Logo.png" alt="Logo" width=250>
     </a>
 
     <!-- Toggler/collapsibe Button -->
