--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <nav class="navbar navbar-expand-sm  navbar-dark">
     <!-- Brand/logo -->
     <a class="navbar-brand" href="#">
-      <img src="logo.png" alt="Logo" width=250></a>
+      <img src="Logo.png" alt="Logo" width=250></a>
     <!-- Toggler/collapsibe Button -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
@@ -109,7 +109,7 @@
       </div>
       <div class="col-md-6 pt-3">
         <a href="project pages/Sunflower.html">
-          <img class="img-fluid" src="assets/SunflowerCloseup.png" class="img-thumbnail" alt="Sunflower" width="500" height="200"> 
+          <img class="img-fluid" src="assets/sunflowerCloseup.png" class="img-thumbnail" alt="Sunflower" width="500" height="200"> 
         </a>
       </div>
     </div>
