--- a/project pages/popGrowth.html
+++ b/project pages/popGrowth.html
@@ -17,7 +17,7 @@
   <nav class="navbar navbar-expand-sm  navbar-dark">
     <!-- Brand/logo -->
     <a class="navbar-brand" href="../index.html">
-      <img src="logo.png" alt="Logo" width=250>
+      <img src="Logo.png" alt="Logo" width=250>
     </a>
 
     <!-- Toggler/collapsibe Button -->
@@ -48,7 +48,7 @@
   </div>
 
   <div class="row">
-    <img class="img-fluid" src="../assets/popGrowth.png" alt="popGrowth">
+    <img class="img-fluid" src="../assets/PopGrowth.png" alt="popGrowth">
   </div>
 </div>
 </body>
