--- a/project pages/sunset.html
+++ b/project pages/sunset.html
@@ -17,7 +17,7 @@
   <nav class="navbar navbar-expand-sm  navbar-dark">
     <!-- Brand/logo -->
     <a class="navbar-brand" href="../index.html">
-      <img src="../assets/logo.png" alt="Logo" width=250></a>
+      <img src="../assets/Logo.png" alt="Logo" width=250></a>
 
     <!-- Toggler/collapsibe Button -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
