--- a/project pages/sunset.html
+++ b/project pages/sunset.html
@@ -48,9 +48,9 @@
           <h4>Sunset</h4>
           <p>Oil on canvas.</p>
           <p>This was the first painting I did after a 10-year break. Why ten years? Marriage, house buying, house renovating, divorce, more house renovating...you get the picture. But regardless, my heart was so happy I started again!</p>
-          <p>This and several pieces of art were in a house that was washed away by Hurricane Micheal in October 2018. The others were never found, but miraculously we found this one stuck up in a tree about 1/4 mile from the house just an hour before the front loaders were going to clear the area. We had to climb over a mountain of house parts and furniture to get it. </p>
+          <p>This and several pieces of art were in a house that was washed away by Hurricane Micheal in October 2018. The others were never found, but miraculously we found this one stuck up in a tree about 1/4 mile from the house just an hour before the front loaders were going to clear the area. We had to climb over a mountain of lumber, roofs parts and furniture to get it. </p>
 
-          <p>It had weathered 160mph winds and a 19' storm surge. It's got some lovely rubbed edges now and if you hold it up to the light, you can see nail holds. But it's still sturdy and strong after riding through the eye wall of a Category 5 hurricane.</p>
+          <p>It had weathered 160mph winds and a 19-foot storm surge. It's got some lovely rubbed edges now and if you hold it up to the light, you can see a few nail holes. But it's still sturdy and strong after riding through the eyewall of a Category 5 hurricane. It will hang prominantly in the new and stronger house once it's finished.</p>
         </div>
       </div>    
   </div>
