--- a/resume.html
+++ b/resume.html
@@ -42,106 +42,168 @@
     </div>
   </nav>
 
-<div class="container-fluid pt-4">
-  <div class="row">
-    <div class="col-md-10">  
-      <h4 class="text-dark">Profile</h4>
-      <p>As an urban planner with 23 years of experience in state and local urban planning, I am growing my skills and experience to harness the power of Geographic Information Systems mapping and development. In particular, I want to help tackle urban growth and sustainability challenges with a focus on making technical information and complex interrelationships more accessible and comprehensible for the public so as to better inform decision making.</p>
+  <div class="container-fluid pt-4">
+    <div class="row">
+      <div class="col-md-2">
+        <img class="img-fluid" src="assets/headshot_thumbnail.png" class="img-thumbnail" alt="headshot" width="200" height="200">
+      </div>
+      <div class="col-md-8">  
+        <h3 class="text-dark">Profile</h3>
+        <p>As an urban planner with 24 years of experience in state and local urban planning, I am growing my skills and experience to harness the power of Geographic Information Systems mapping and development. In particular, I want to help tackle urban growth and sustainability challenges with a focus on making technical information and complex interrelationships more accessible and comprehensible for the public so as to better inform decision making.</p>
+      </div>
     </div>
   </div>
 
-<div class="container-fluid pt-4">
-  <div class="row">
-    <div class="col-md-10"> 
-      <h4 class="text-dark">Employment History</h4>
-      <h5>Planning Director for Tallahassee-Leon County Planning Department</h5>
-      <p class="text-dark">2014 — Present (position upgraded from Manager to Director in 2017)</p>
-      <p>● Manage the day to day operations of the department's 25 employees, four divisions, three citizen committees, and the Planning Commission</p>
-      <p>● Prepare complex policy analyses and make professional recommendations affecting long-term sustainability, growth, and development for a county of 300,000 people</p>
-      <p>● Regularly make professional presentations on complex and controversial topics</p>
-      <p>● Brief City and County elected officials and top management on politically sensitive or high-profile projects and issues</p>
-      <p>● Organize and run numerous public meetings, workshops and hearings throughout the community</p>
-      <p>● Coordinate regularly with various departments, the Community Redevelopment Agency, businesses and neighborhood groups</p>
-      <p>● Technical subcommittee member of the Metropolitan Planning Organization and Blueprint Intergovernmental Agency</p>
-      <p>● Oversee completion of special projects requested by City and County administration</p>
-      <p>● Served during the emergency management response to three major hurricanes</p>
+  </div>  <div class="container-fluid pt-4">
+    <div class="row">
+      <div class="col-md-10"> 
+        <h3 class="text-dark">Employment History</h3>
+        <p>Planning Director for Tallahassee-Leon County Planning Department</p>
+        <h6>2014 — Present (position upgraded from Manager to Director in 2017)</h6>
+          <ul>
+            <li>Manage the day to day operations of the department's 25 employees, four divisions, three citizen committees, and the Planning Commission</li>
+            <li>Prepare complex policy analyses and make professional recommendations affecting long-term sustainability, growth, and development for a county of 300,000 people</li>
+            <li>Regularly make professional presentations on complex and controversial topics</li>
+            <li>Brief City and County elected officials and top management on politically sensitive or high-profile projects and issues</li>
+            <li>Organize and run numerous public meetings, workshops and hearings throughout the community</li>
+            <li>Coordinate regularly with various departments, the Community Redevelopment Agency, businesses and neighborhood groups</li>
+            <li>Technical subcommittee member of the Metropolitan Planning Organization and Blueprint Intergovernmental Agency</li>
+            <li>Oversee completion of special projects requested by City and County administration</li>
+            <li>Served during the emergency management response to three major hurricanes</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <div class="container-fluid pt-4">
+    <div class="row">
+      <div class="col-md-10"> 
+        <p>Comprehensive Planning Administrator, Special Projects Manager, Transportation Senior Planner & Land Use Senior Planner for the Tallahassee-Leon County Planning Department</p>
+        <h6>August 2001 — December 2013</h6>
+          <ul>
+            <li>Promoted to progressively more responsible positions</li>
+            <li>Coordinated planning activities for the City and County, including the Comprehensive Plan and Future Land Use Map, which govern development patterns for the next twenty years</li>
+            <li>Coordinated the City of Tallahassee proposals included in a $750 million infrastructure voter referendum, which then passed in 2014</li>
+            <li>Managed the drafting of a $30 million+ countywide bicycle route and greenways trails system plan which was funded by the above referenced voter referendum in and is currently under construction</li>
+            <li>Established a customer service oriented Urban Design Studio to support quality urban infill and redevelopment</li>
+            <li>Oversaw the development of a Post Disaster Redevelopment Plan</li>
+            <li>Oversaw development and implementation of “Sense of Place” Action Plans that prioritize social and infrastructure investments in support of walkable urban centers and vibrant neighborhoods; three such plans were also funded for a total of $35 million by the above referenced referendum</li>
+            <li>Prepared community outreach plans, ran public meetings, and made presentations to key stakeholder groups</li>
+            <li>Served as a member of City and County Development Review Committees, making decisions to approve, alter, or deny major development proposals</li>
+          </ul>
+      </div>
+    </div>
+  </div>
+
+  <div class="container-fluid pt-4">
+    <div class="row">
+      <div class="col-md-10"> 
+        <p>Project Manager at Summit Professional Services, Tallahassee, Florida</p>
+        <h6>January 1999 — August 2001</h6>
+            <ul>
+              <li>Prepared federal and state grant and loan applications for infrastructure and housing improvements for small local governments in north and central Florida </li>          
+              <li>Responsible for tracking and completing federal/state reporting requirements for 15-20 grantees, many of which had multiple ongoing grants and projects involving millions of dollars</li>
+              <li>Prepared and held public hearings before various city and county councils around the state </li>
+              <li>Organized and conducted door to door, phone, and mail surveys necessary for Community Development Block Grant applications</li>
+              <li>Maintained working knowledge of Community Development Block Grant, Florida Department of Transportation, United States Dept. of Agriculture/Economic Development Administration, Florida Department of Environmental Protection, and various other agency policies and procedures related to grant and loan programs and tenant relocation</li>
+            </ul>
+       </div>
+    </div>
+  </div>
+
+  <div class="container-fluid pt-4">
+    <h3 class="text-dark" class="font-weight-bolder">Education</h3>
+    <div class="row pt-2">
+      <div class="col-md-10"> 
+        <h5>Master’s of GIS and Web Map Programming (online)</h5>
+        <h5>University of Wisconsin – Madison</h5>
+        <h6 class="text-dark">January 2020 – May 2023 (expected)</h6>
+      </div>
+    </div>
+    <div class="row pt-3">
+      <div class="col-md-10">        
+        <h5>Graphic Information Systems Fundamentals Capstone Certificate (online)</h5>
+        <h5>University of Wisconsin – Madison</h5>
+        <h6 class="text-dark">May 2019 — December 2019</h6>
+      </div>
+    </div>
+    <div class="row pt-3">
+      <div class="col-md-10"> 
+        <h5>Master’s of Urban & Regional Planning</h5>
+        <h5>Florida State University (Tallahassee, Florida)</h5>
+        <h6 class="text-dark">August 1994 — May 1996</h6>
+      </div>
+    </div>
+    <div class="row pt-3">
+      <div class="col-md-10"> 
+        <h5>Bachelor’s of Political Science </h5>
+        <h5>Birmingham Southern College (Birmingham, Alabama)</h5>
+        <h6 class="text-dark">August 1991 — May 1994</h6>
+      </div>
+    </div>
+  </div>
+
+  <div class="container-fluid pt-4">
+    <div class="row">
+      <div class="col-md-10"> 
+        <h3 class="text-dark">Skills</h3>
+          <ul>
+            <li>Print and Web Map Production</li>
+            <li>Graphic Information Systems analysis</li>
+            <li>Comprehensive land use planning & zoning</li>
+            <li>Land use regulation/code development</li>
+            <li>Multimodal transportation policy development</li>
+            <li>Managing multiple competing and complex projects and teams </li>
+            <li>Professional presentations, in person & televised</li>
+            <li>Grant writing & management</li>
+          </ul>
+      </div>
+    </div>
+  </div>
+
+  <div class="container-fluid pt-4">
+    <div class="row">
+      <div class="col-md-10">
+        <h3 class="text-dark">Software</h3>
+          <ul>
+            <li>- ArcMap & ArcPro</li>
+            <li>- Adobe Illustrator & Adobe Photoshop</li>
+            <li>- HTML5/CSS3 & Bootstrap</li>
+            <li>- Map Box Studio </li>
+            <li>- Basic geocomputing, including Python, GDAL/OGR & ArcPy</li>
+            <li>- Microsoft Office Suite</li>
+          </ul>
+      </div>
+    </div>
+  </div>
+
+  <div class="container-fluid pt-4">
+    <div class="row">
+      <div class="col-md-10">
+        <h3 class="text-dark">Certifications</h3> 
+          <ul>     
+            <li>- Certified Planner, American Institute of Certified Planners (2000)</li>
+          </ul>
+      </div>
+    </div>
+  </div>
+
+  <div class="container-fluid pt-4">
+    <div class="row">
+      <div class="col-md-10">
+        <h3 class="text-dark">Hobbies</h3>
+          <ul>      
+            <li>- Oil painting</li>
+            <li>- Bead weaving</li>
+            <li>- Kayaking</li>
+          </ul>
+      </div>
     </div>
   </div>
 </div>
 
-<div class="container-fluid pt-4">
-  <div class="row">
-    <div class="col-md-10"> 
-      <h5>Comprehensive Planning Administrator, Special Projects Manager, Transportation Senior Planner & Land Use Senior Planner for the Tallahassee-Leon County Planning Department</h5>
-      <p class="text-dark">August 2001 — December 2013</p>
-      <p>● Promoted to progressively more responsible positions</p>
-      <p>● Coordinated planning activities for the City and County, including the Comprehensive Plan and Future Land Use Map, which govern development patterns for the next twenty years</p>
-      <p>● Coordinated the City of Tallahassee proposals included in a $750 million infrastructure voter referendum, which then passed in 2014</p>
-      <p>● Managed the drafting of a $30 million+ countywide bicycle route and greenways trails system plan which was funded by the above referenced voter referendum in and is currently under construction </p>
-      <p>● Established a customer service oriented Urban Design Studio to support quality urban infill and redevelopment</p>
-      <p>● Oversaw the development of a Post Disaster Redevelopment Plan </p>
-      <p>● Oversaw development and implementation of “Sense of Place” Action Plans that prioritize social and infrastructure investments in support of walkable urban centers and vibrant neighborhoods; three such plans were also funded for a total of $35 million by the above referenced referendum</p>
-      <p>● Prepared community outreach plans, ran public meetings, and made presentations to key stakeholder groups</p>
-      <p>● Served as a member of City and County Development Review Committees, making decisions to approve, alter, or deny major development proposals</p>
-    </div>
-  </div>
-</div>
 
-<div class="container-fluid pt-4">
-  <div class="row">
-    <div class="col-md-10"> 
-      <h5>Project Manager at Summit Professional Services, Tallahassee, Florida</h5>
-      <p class="text-dark">January 1999 — August 2001</p>
-      <p>● Prepared federal and state grant and loan applications for infrastructure and housing improvements for small local governments in north and central Florida </p>
-      <p>● Responsible for tracking and completing federal/state reporting requirements for 15-20 grantees, many of which had multiple ongoing grants and projects involving millions of dollars</p>
-      <p>● Prepared and held public hearings before various city and county councils around the state </p>
-      <p>● Organized and conducted door to door, phone, and mail surveys necessary for Community Development Block Grant applications</p>
-      <p>● Maintained working knowledge of Community Development Block Grant, Florida Department of Transportation, United States Dept. of Agriculture/Economic Development Administration, Florida Department of Environmental Protection, and various other agency policies and procedures related to grant and loan programs and tenant relocation</p>
-     </div>
-  </div>
-</div>
 
-<div class="container-fluid pt-4">
-  <div class="row">
-    <div class="col-md-10"> 
-      <h4 class="text-dark" class="font-weight-bolder">Education</h4>
-      <h5>Master’s of GIS and Web Map Programming (online)</h5>
-      <h5>University of Wisconsin – Madison</h5>
-      <p class="text-dark">January 2020 – May 2023 (expected)</p>
-
-      <h5>Graphic Information Systems Fundamentals Capstone Certificate (online)</h5>
-      <h5>University of Wisconsin – Madison</h5>
-      <p class="text-dark">May 2019 — December 2019</p>
-
-      <h5>Master’s of Urban & Regional Planning</h5>
-      <h5>Florida State University (Tallahassee, Florida)</h5>
-      <p class="text-dark">August 1994 — May 1996</p>
-
-      <h5>Bachelor’s of Political Science </h5>
-      <h5>Birmingham Southern College (Birmingham, Alabama)</h5>
-      <p class="text-dark">August 1991 — May 1994</p>
-
-<div class="container-fluid pt-4">
-  <div class="row">
-    <div class="col-md-10"> 
-      <h4 class="text-dark">Skills</h4>
-      <p>● </p>
-      <p>● </p>
-      <p>● </p>
-
-      <p class="text-dark">Software</p>
-      <p>● </p>
-      <p>● </p>
-      <p>● </p>
-      <p>● </p>
-      <p>● </p>
-      <p>● </p>
-      <p>● </p>
-      <p>● </p>
-      <p>● </p>
-    </div>
-  </div>
-</div>
 
 
 
