--- a/project pages/GlobalWarming.html
+++ b/project pages/GlobalWarming.html
@@ -16,7 +16,7 @@
   <!-- Creates the navbar -->
   <nav class="navbar navbar-expand-sm  navbar-dark">
     <!-- Brand/logo -->
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="../index.html">
       <img src="../assets/Logo.png" alt="Logo" width=250>
     </a>
 
