--- a/project pages/meadow.html
+++ b/project pages/meadow.html
@@ -47,7 +47,7 @@
       </div>
         <div class="col-md-5 pt-3">  
           <h4>Meadow</h4>
-          <p>Oil on canvas.</p>
+          <p>Oil on canvas, 20" x 40".</p>
           <p>This was inspired by a farm on Highway 71 between Blountstown and Wewahitchka, Florida. It was spring and the crop was just about to bloom.</p>
         </div>
       </div>    
