--- a/project pages/popGrowth.html
+++ b/project pages/popGrowth.html
@@ -17,7 +17,7 @@
   <nav class="navbar navbar-expand-sm  navbar-dark">
     <!-- Brand/logo -->
     <a class="navbar-brand" href="../index.html">
-      <img src="Logo.png" alt="Logo" width=250>
+      <img src="../assets/Logo.png" alt="Logo" width=250>
     </a>
 
     <!-- Toggler/collapsibe Button -->
@@ -43,12 +43,19 @@
 
 <div class="container-fluid pt-4" >
   <div class="row">
-    <h3 class="text-white" class="text-center">Leon County Population - A 25-year Look Ahead</h3>
-    <p class="text-center">Infographics are a great way to really delve into a topic in more detail. This one looks at a very real issue using current local data.</p>
+    <div class="col-md-1">
+    </div>
+    <div class="col-md-10"> 
+      <h3 class="text-white" class="text-center">Leon County Population - A 25-year Look Ahead</h3>
+    </div>
   </div>
 
   <div class="row">
-    <img class="img-fluid" src="../assets/PopGrowth.png" alt="popGrowth">
+    <div class="col-md-1">
+    </div>
+    <div class="col-md-10">
+      <img class="img-fluid" src="../assets/PopGrowth4.png" alt="popGrowth">
+    </div>
   </div>
 </div>
 </body>
