--- a/project pages/sunset.html
+++ b/project pages/sunset.html
@@ -46,7 +46,7 @@
       </div>
         <div class="col-md-5 pt-3">  
           <h4>Sunset</h4>
-          <p>Oil on canvas.</p>
+          <p>Oil on canvas, 20" x 40".</p>
           <p>This was the first painting I did after a 10-year break. Why ten years? Marriage, house buying, house renovating, divorce, more house renovating...you get the picture. But regardless, my heart was so happy I started again!</p>
           <p>This and several pieces of art were in a house that was washed away by Hurricane Micheal in October 2018. The others were never found, but miraculously we found this one stuck up in a tree about 1/4 mile from the house just an hour before the front loaders were going to clear the area. We had to climb over a mountain of lumber, roofs parts and furniture to get it. </p>
 
