--- a/project pages/beachCamping.html
+++ b/project pages/beachCamping.html
@@ -17,7 +17,7 @@
   <nav class="navbar navbar-expand-sm  navbar-dark">
     <!-- Brand/logo -->
     <a class="navbar-brand" href="../index.html">
-      <img src="Logo.png" alt="Logo" width=250>
+      <img src="../assets/Logo.png" alt="Logo" width=250>
     </a>
 
     <!-- Toggler/collapsibe Button -->
