--- a/resume.html
+++ b/resume.html
@@ -115,29 +115,29 @@
     <h3 class="text-dark" class="font-weight-bolder">Education</h3>
     <div class="row pt-2">
       <div class="col-md-10"> 
-        <h5>Master’s of GIS and Web Map Programming (online)</h5>
-        <h5>University of Wisconsin – Madison</h5>
+        <h5 class="text-white">Master’s of GIS and Web Map Programming (online)</h5>
+        <h6 class="text-dark">University of Wisconsin – Madison</h6>
         <h6 class="text-dark">January 2020 – May 2023 (expected)</h6>
       </div>
     </div>
     <div class="row pt-3">
       <div class="col-md-10">        
-        <h5>Graphic Information Systems Fundamentals Capstone Certificate (online)</h5>
-        <h5>University of Wisconsin – Madison</h5>
+        <h5 class="text-white">Graphic Information Systems Fundamentals Capstone Certificate (online)</h5>
+        <h6 class="text-dark">University of Wisconsin – Madison</h6>
         <h6 class="text-dark">May 2019 — December 2019</h6>
       </div>
     </div>
     <div class="row pt-3">
       <div class="col-md-10"> 
-        <h5>Master’s of Urban & Regional Planning</h5>
-        <h5>Florida State University (Tallahassee, Florida)</h5>
+        <h5 class="text-white">Master’s of Urban & Regional Planning</h5>
+        <h6 class="text-dark">Florida State University (Tallahassee, Florida)</h6>
         <h6 class="text-dark">August 1994 — May 1996</h6>
       </div>
     </div>
     <div class="row pt-3">
       <div class="col-md-10"> 
-        <h5>Bachelor’s of Political Science </h5>
-        <h5>Birmingham Southern College (Birmingham, Alabama)</h5>
+        <h5 class="text-white">Bachelor’s of Political Science </h5>
+        <h6 class="text-dark">Birmingham Southern College (Birmingham, Alabama)</h6>
         <h6 class="text-dark">August 1991 — May 1994</h6>
       </div>
     </div>
@@ -147,7 +147,7 @@
     <div class="row">
       <div class="col-md-10"> 
         <h3 class="text-dark">Skills</h3>
-          <ul>
+          <ul class="text-white">
             <li>Print and Web Map Production</li>
             <li>Graphic Information Systems analysis</li>
             <li>Comprehensive land use planning & zoning</li>
@@ -165,13 +165,13 @@
     <div class="row">
       <div class="col-md-10">
         <h3 class="text-dark">Software</h3>
-          <ul>
-            <li>- ArcMap & ArcPro</li>
-            <li>- Adobe Illustrator & Adobe Photoshop</li>
-            <li>- HTML5/CSS3 & Bootstrap</li>
-            <li>- Map Box Studio </li>
-            <li>- Basic geocomputing, including Python, GDAL/OGR & ArcPy</li>
-            <li>- Microsoft Office Suite</li>
+          <ul class="text-white">
+            <li>ArcMap & ArcPro</li>
+            <li>Adobe Illustrator & Adobe Photoshop</li>
+            <li>HTML5/CSS3 & Bootstrap</li>
+            <li>Map Box Studio </li>
+            <li>Basic geocomputing, including Python, GDAL/OGR & ArcPy</li>
+            <li>Microsoft Office Suite</li>
           </ul>
       </div>
     </div>
@@ -181,8 +181,8 @@
     <div class="row">
       <div class="col-md-10">
         <h3 class="text-dark">Certifications</h3> 
-          <ul>     
-            <li>- Certified Planner, American Institute of Certified Planners (2000)</li>
+          <ul class="text-white">     
+            <li>Certified Planner, American Institute of Certified Planners (2000)</li>
           </ul>
       </div>
     </div>
@@ -192,10 +192,10 @@
     <div class="row">
       <div class="col-md-10">
         <h3 class="text-dark">Hobbies</h3>
-          <ul>      
-            <li>- Oil painting</li>
-            <li>- Bead weaving</li>
-            <li>- Kayaking</li>
+          <ul class="text-white">      
+            <li>Oil painting</li>
+            <li>Bead weaving</li>
+            <li>Kayaking</li>
           </ul>
       </div>
     </div>
