--- a/project pages/popGrowth.html
+++ b/project pages/popGrowth.html
@@ -47,6 +47,7 @@
     </div>
     <div class="col-md-10"> 
       <h3 class="text-white" class="text-center">Leon County Population - A 25-year Look Ahead</h3>
+      <p>Infographics are a great way to really delve into a topic. This one is about a very real issue using local data.</p>
     </div>
   </div>
 
@@ -54,7 +55,7 @@
     <div class="col-md-1">
     </div>
     <div class="col-md-10">
-      <img class="img-fluid" src="../assets/PopGrowth4.png" alt="popGrowth">
+      <img class="img-fluid" src="../assets/popGrowth4.png" alt="popGrowth">
     </div>
   </div>
 </div>
