--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
   </div>
 
-  <div class="container-fluid pt-3">
+  <div class="container-fluid">
     <h3> Thematic Maps and Infographics </h3>
     <div class="row">
       <div class="col-md-4 pt-3">
