--- a/project pages/AthensAnkara.html
+++ b/project pages/AthensAnkara.html
@@ -43,7 +43,7 @@
 <div class="container-fluid">
     <div class="row">
       <div class="col-md-7">  
-        <img class="img-fluid" src="../assets/AthensAnkara.png" alt="AthensAnkara" width="850" height="300">
+        <img class="img-fluid" src="../assets/AthensAnkara8inch.png" alt="AthensAnkara" width="850" height="300">
       </div>
         <div class="col-md-5">  
           <h4>Hillshades and Visual Hierarchy</h4>
