Added new painting to 'Pure Art'

--- a/resume.html
+++ b/resume.html
@@ -48,7 +48,7 @@
         <img class="img-fluid" src="assets/headshot_thumbnail.png" class="img-thumbnail" alt="headshot" width="200" height="200">
       </div>
       <div class="col-md-8">  
-        <h3 class="text-dark">Profile</h3>
+        <h3 class="text-dark">Cherie Y. Bryant, AICP</h3>
         <p>As an urban planner with 24 years of experience in state and local urban planning, I am growing my skills and experience to harness the power of Geographic Information Systems mapping and development. In particular, I want to help tackle urban growth and sustainability challenges with a focus on making technical information and complex interrelationships more accessible and comprehensible for the public so as to better inform decision making.</p>
       </div>
     </div>
