--- a/about.html
+++ b/about.html
@@ -54,6 +54,8 @@
       <p>I’ve also been an amateur artist my entire life. My mother bought me an oil painting kit when I was 12. Since the first scent of linseed oil opening that tube of burnt sienna, I’ve been hooked, reading books and taking drawing classes here and there to improve my skills. Even when the circumstances of life left little time and energy for painting, I would think longingly of it and occassional dig out the old paints to smell them.</p>
       
       <p>Approaching the 25-year mark in my career, I again feel the pull of a new challenge. I see the power of mapping and mobile technology and am eager to learn and apply these tools. One of the greatest challenges in urban planning is communicating complicated concepts and data in a way that citizens can digest, often in an emotionally charged environment. Cartography offers me the chance to combine new, powerful skills with a passion for art with a goal of creating new tools to serve the planning field.</p>
+
+      <p>Cherie Y. Bryant, AICP</p>
     </div>
   </div>    
 </div>
