--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       </div>
       <div class="col-md-4 pt-3">
         <a href="project pages/AthensAnkara.html">
-          <img class="img-fluid" src="assets/AthensAnkara.png" class="img-thumbnail" alt="AthensAnkara" width="400" height="200"> 
+          <img class="img-fluid" src="assets/AthensAnkara8inch.png" class="img-thumbnail" alt="AthensAnkara" width="400" height="200"> 
         </a>
       </div>
     </div>
@@ -97,19 +97,26 @@
   <div class="container-fluid pt-5">
     <h3> Pure Art </h3>
     <div class="row">
-      <div class="col-md-3 pt-3">
-        <a href="project pages/meadow.html">
-          <img class="img-fluid" src="assets/meadow.jpg" class="img-thumbnail" alt="Meadow" width="200" height="400"> 
-        </a>
-      </div>
-      <div class="col-md-3 pt-3">
-        <a href="project pages/sunset.html">
-          <img class="img-fluid" src="assets/sunset.jpg" class="img-thumbnail" alt="Sunset" width="200" height="400"> 
-        </a>
-      </div>
-      <div class="col-md-6 pt-3">
+      <div class="col-md-5 pt-3">
         <a href="project pages/Sunflower.html">
           <img class="img-fluid" src="assets/sunflowerCloseup.png" class="img-thumbnail" alt="Sunflower" width="500" height="200"> 
+        </a>
+      </div>      
+
+      <div class="col-md-2 pt-3">
+        <a href="project pages/sunset.html">
+          <img class="img-fluid" src="assets/sunset.jpg" class="img-thumbnail" alt="Sunset" width="202" height="400"> 
+        </a>
+      </div>
+
+      <div class="col-md-2 pt-3">
+        <a href="project pages/LakeElla.html">
+          <img class="img-fluid" src="assets/LakeEllaTree.png" class="img-thumbnail" alt="LakeElla" width="203" height="200"> 
+        </a>
+      </div>
+            <div class="col-md-2 pt-3">
+        <a href="project pages/meadow.html">
+          <img class="img-fluid" src="assets/meadow.jpg" class="img-thumbnail" alt="Meadow" width="195" height="400"> 
         </a>
       </div>
     </div>
