--- a/project pages/LakeElla.html
+++ b/project pages/LakeElla.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>AthensAnkara</title>
+  <title>LakeElla</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
@@ -42,17 +42,18 @@
   </nav>    
 <div class="container-fluid">
     <div class="row">
-      <div class="col-md-7">  
-        <img class="img-fluid" src="../assets/AthensAnkara8inch.png" alt="AthensAnkara" width="850" height="300">
+      <div class="col-md-3">  
+        <img class="img-fluid" src="../assets/LakeEllaTree.png" alt="meadow" width="250" height="400">
       </div>
-        <div class="col-md-5">  
-          <h4>Hillshades and Visual Hierarchy</h4>
-          <p>The goal of this Graphic Design in Cartography assignment was to learn to realistically represent terrain by designing a 21-leg bicycle route race with approximately 100 miles per leg. It would be modeled after the Tour de France but could be anywhere in the world. I chose Athens to Ankara because of the beautiful coastal views it would provide as well as the presence of both flat and mountainous terrain. </p>
-
-          <p>The route was mapped segment by segment in Google maps along existing roadways, then imported into ArcMap for processing with other vector data layers. The underlying hillshade was generated from publicly available elevation data then blended with land cover data in Adobe Photoshop to create the rich base map. Raster and vector data layers were then imported into Adobe Illustrator for the final map creation.</p>
+        <div class="col-md-9 pt-3">  
+          <h4>Lake Ella</h4>
+          <p>Oil on canvas, 20" x 40".</p>
+          <p>I've walked around Lake Ella near downtown Tallahassee for years. Late in December a couple of years ago I noticed the sunset created such beautiful contrasts between light and dark on the trees. I came back the next day just before sunset and and snapped some photos, one of which served as the basis for this painting.</p>
+          <p>I had read a book on how the oil painting Master's would create richness and depth by layering on shadows in dark, then layer on whites over both highlights and darks, and then build up color and shadows in successive translucent layers. Each layer is allowed to dry substantially over several days before the next is applied. I wanted to play with this technique and the stunning contrasts of this tree seemed like the perfect subject. I didn't stick to the traditional method completely as I felt the urge to add in some opaque wet over wet in places for striking color. I adore the beautiful glow this method created and will do it again!</p>  
+          <p>I also decided on this project that it was time to invest in professional grade oils. I'm now a diehard fan of Williamsburg Oils, founded in one of my favorite places - NYC.</p>
         </div>
       </div>    
   </div>
 </div>
 </body>
-</html>
+</html><\
