Updates to Resume/Education & About
Added coursework to "Resume"
Cleaned up a sentence in "About"

--- a/project pages/LakeElla.html
+++ b/project pages/LakeElla.html
@@ -48,7 +48,7 @@
         <div class="col-md-9 pt-3">  
           <h4>Lake Ella</h4>
           <p>Oil on canvas, 20" x 40".</p>
-          <p>I've walked around Lake Ella near downtown Tallahassee for years. Late in December a couple of years ago I noticed the sunset created such beautiful contrasts between light and dark on the trees. I came back the next day just before sunset and and snapped some photos, one of which served as the basis for this painting.</p>
+          <p>I've walked around Lake Ella near downtown Tallahassee for years. Late in December a couple of years ago I noticed the sunset created such beautiful contrasts between light and dark on the trees. I came back the next day just before sunset and snapped some photos, one of which served as the basis for this painting.</p>
           <p>I had read a book on how the oil painting Master's would create richness and depth by layering on shadows in dark, then layer on whites over both highlights and darks, and then build up color and shadows in successive translucent layers. Each layer is allowed to dry substantially over several days before the next is applied. I wanted to play with this technique and the stunning contrasts of this tree seemed like the perfect subject. I didn't stick to the traditional method completely as I felt the urge to add in some opaque wet over wet in places for striking color. I adore the beautiful glow this method created and will do it again!</p>  
           <p>I also decided on this project that it was time to invest in professional grade oils. I'm now a diehard fan of Williamsburg Oils, founded in one of my favorite places - NYC.</p>
         </div>
