--- a/resume.html
+++ b/resume.html
@@ -117,7 +117,18 @@
       <div class="col-md-10"> 
         <h5 class="text-white">Master’s of GIS and Web Map Programming (online)</h5>
         <h6 class="text-dark">University of Wisconsin – Madison</h6>
-        <h6 class="text-dark">January 2020 – May 2023 (expected)</h6>
+        <h6 class="text-dark">January 2020 – 2022 (expected)</h6>
+        <h6 class="text-dark">Coursework:</h6>
+            <ul class="text-dark" style="font-size:15px;">
+              <li>Geocomputing (complete, Fall 2019)</li>
+              <li>Graphic Design in Cartography (complete, Spring 2020)</li>
+              <li>Spatial Database Design, Creation & Maintenance (in progress)</li>
+              <li>Interactive Cartography & Visualization (2021)</li>
+              <li>Spatial Web & Mobile Programming (2021)</li>
+              <li>GIS & Spatial Analysis (2021)</li>
+              <li>Capstone in GIS Development (2022)</li>
+              <li>Practicum in GIS Development (2022)</li>
+          </ul>
       </div>
     </div>
     <div class="row pt-3">
