--- a/resume.html
+++ b/resume.html
@@ -49,7 +49,7 @@
       </div>
       <div class="col-md-8">  
         <h3 class="text-dark">Cherie Y. Bryant, AICP</h3>
-        <p>As an urban planner with 24 years of experience in state and local urban planning, I am growing my skills and experience to harness the power of Geographic Information Systems mapping and development. In particular, I want to help tackle urban growth and sustainability challenges with a focus on making technical information and complex interrelationships more accessible and comprehensible for the public so as to better inform decision making.</p>
+        <p>As an urban planner with 24 years of experience in state and local urban planning, I am growing my skills to harness the power of Geographic Information Systems mapping and development. In particular, I want to help tackle urban growth and sustainability challenges with a focus on making technical information and complex interrelationships more accessible and comprehensible to better inform decision-making.</p>
       </div>
     </div>
   </div>
@@ -102,10 +102,25 @@
         <h6>January 1999 — August 2001</h6>
             <ul>
               <li>Prepared federal and state grant and loan applications for infrastructure and housing improvements for small local governments in north and central Florida </li>          
-              <li>Responsible for tracking and completing federal/state reporting requirements for 15-20 grantees, many of which had multiple ongoing grants and projects involving millions of dollars</li>
+              <li>Tracked and completed federal/state reporting requirements for 15-20 grantees, many of which had multiple ongoing grants and projects involving millions of dollars</li>
               <li>Prepared and held public hearings before various city and county councils around the state </li>
               <li>Organized and conducted door to door, phone, and mail surveys necessary for Community Development Block Grant applications</li>
               <li>Maintained working knowledge of Community Development Block Grant, Florida Department of Transportation, United States Dept. of Agriculture/Economic Development Administration, Florida Department of Environmental Protection, and various other agency policies and procedures related to grant and loan programs and tenant relocation</li>
+            </ul>
+       </div>
+    </div>
+  </div>
+
+  <div class="container-fluid pt-4">
+    <div class="row">
+      <div class="col-md-10"> 
+        <p>Community Assistance Consultant at the Florida Department of Community Affairs, Tallahassee, Florida</p>
+        <h6>August 1995 — August 1998</h6>
+            <ul>
+              <li>Managed $20-40 million in grant contracts and 15-30 local government projects per year for federally funded community development and disaster relief</li>          
+              <li>Traveled to cities and counties throughout the state to confirm compliance with state and federal regulations, review project status, and provide technical assistance </li>
+              <li>Provided training workshops for applicants and grantees</li>
+              <li>Maintained working knowledge of federal labor laws and bookkeeping requirements</li>
             </ul>
        </div>
     </div>
