Index page changes
Replaced "population..." with "happy cities"

Changed order of reference maps

--- a/index.html
+++ b/index.html
@@ -59,28 +59,29 @@
     <div class="row">
       <div class="col-md-4 pt-3">
         <a href="project pages/GlobalWarming.html">
-          <img class="img-fluid" src="assets/GlobalWarming.png" class="img-thumbnail" alt="GlobalWarming" width="400" height="200" > 
+          <img class="img-fluid" src="assets/GlobalWarming.png" class="img-thumbnail" alt="GlobalWarming" width="436" height="200" > 
         </a>          
+      </div>
+      <div class="col-md-4 pt-3">
+        <a href="project pages/HappyCities.html">
+          <img class="img-fluid" src="assets/Happy Cities.png" class="img-thumbnail" alt="popGrowth" width="436" height="200"> 
+        </a>
       </div>
       <div class="col-md-4 pt-3">
         <a href="project pages/gundeaths.html">
           <img class="img-fluid" src="assets/gundeaths.png" class="img-thumbnail" alt="gundeaths" width="436" height="653"> 
         </a>
       </div>
-      <div class="col-md-4 pt-3">
-        <a href="project pages/popGrowth.html">
-          <img class="img-fluid" src="assets/popGrowthCrop.png" class="img-thumbnail" alt="popGrowth" width="400" height="200"> 
-        </a>
-      </div>
     </div>
   </div>  
+
   <div class="container-fluid pt-5">
     <h3> Reference Maps </h3>
     <div class="row">
       <div class="col-md-4 pt-3">
-        <a href="project pages/beachCamping.html">
-          <img class="img-fluid" src="assets/beachCamping.png" class="img-thumbnail" alt="beachCamping" width="400" height="200"> 
-        </a>          
+        <a href="project pages/AthensAnkara.html">
+          <img class="img-fluid" src="assets/AthensAnkara8inch.png" class="img-thumbnail" alt="AthensAnkara" width="400" height="200"> 
+        </a>
       </div>
       <div class="col-md-4 pt-3">
         <a href="project pages/Africa.html">
@@ -88,9 +89,9 @@
         </a>
       </div>
       <div class="col-md-4 pt-3">
-        <a href="project pages/AthensAnkara.html">
-          <img class="img-fluid" src="assets/AthensAnkara8inch.png" class="img-thumbnail" alt="AthensAnkara" width="400" height="200"> 
-        </a>
+        <a href="project pages/beachCamping.html">
+          <img class="img-fluid" src="assets/beachCamping.png" class="img-thumbnail" alt="beachCamping" width="400" height="200"> 
+        </a>          
       </div>
     </div>
   </div>  
