--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       </div>
       <div class="col-md-4 pt-3">
         <a href="project pages/HappyCities.html">
-          <img class="img-fluid" src="assets/Happy Cities.png" class="img-thumbnail" alt="popGrowth" width="436" height="200"> 
+          <img class="img-fluid" src="assets/Happy cities.png" class="img-thumbnail" alt="HappyCities" width="436" height="200"> 
         </a>
       </div>
       <div class="col-md-4 pt-3">
